--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       content="Web site created using create-react-app"
     />
    
-    <title>React Jodelajo</title>
+    <title>Jodelajo - Frontend development</title>
   </head>
   <body>
    
