--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link href="styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Jodelajo Design && Coding" />
